[2/2] AE: allow disabling quick settings on secure lock screens
Change-Id: I17c2a5e5f7416b7b83076ee5a29e3bd4bf79e1d1

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -446,4 +446,7 @@
     <!-- Hostname setting -->
     <string name="device_hostname">Device hostname</string>
 
+    <!-- Disable quick settings on lock screen switch -->
+    <string name="lockscreen_qs_disabled_title">Quick settings disabled on lock screen</string>
+    <string name="lockscreen_qs_disabled_summary">Disable expanding quick settings and keyguard shortcuts on secure lock screens</string>
 </resources>
