Directly Launch cLock Weather settings
Change-Id: Idbbb9165a643a7bab7e4298e552bd4e62a767fc6

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -328,6 +328,7 @@
     <string name="reset_lockscreen_weather">OK</string>
     <string name="reset_values_message">Reset values?</string>
     <string name="weather_reset_title">Reset weather values</string>
+    <string name="weather_settings">Weather settings</string>
 
     <!-- Lock Clock Fonts -->
     <string name="lock_clock_font_title">Lock Clock fonts</string>
