--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -869,4 +869,12 @@
     <!-- App Exit Toast -->
     <string name="app_exit_toast">Press back again to exit</string>
 
+    <!-- Volume dialog stroke settings -->
+    <string name="volume_dialog_stroke_title">Volume dialog stroke</string>
+    <string name="volume_dialog_stroke_disabled">Disabled</string>
+    <string name="volume_dialog_stroke_accent">Accent color</string>
+    <string name="volume_dialog_stroke_custom">Custom color</string>
+    <string name="volume_dialog_stroke_color_title">Volume dialog stroke color</string>
+    <string name="volume_dialog_stroke_thickness_title">Volume dialog stroke thickness</string>
+
 </resources>
