AE: VolumeDialog corner radius (2/2)
Change-Id: Icd11b8e8e7478933e143f9a4c020682683b9a35d
Signed-off-by: LorDClockaN <lordclockan@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -876,5 +876,6 @@
     <string name="volume_dialog_stroke_custom">Custom color</string>
     <string name="volume_dialog_stroke_color_title">Volume dialog stroke color</string>
     <string name="volume_dialog_stroke_thickness_title">Volume dialog stroke thickness</string>
+    <string name="volume_dialog_corner_radius_title">Volume dialog corner radius</string>
 
 </resources>
