--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -878,4 +878,13 @@
     <string name="volume_dialog_stroke_thickness_title">Volume dialog stroke thickness</string>
     <string name="volume_dialog_corner_radius_title">Volume dialog corner radius</string>
 
+    <!-- QS stroke settings -->
+    <string name="qs_stroke_title">QS shade stroke</string>
+    <string name="qs_stroke_disabled">Disabled</string>
+    <string name="qs_stroke_accent">Accent color</string>
+    <string name="qs_stroke_custom">Custom color</string>
+    <string name="qs_stroke_color_title">QS shade stroke color</string>
+    <string name="qs_stroke_thickness_title">QS shade stroke thickness</string>
+    <string name="qs_corner_radius_title">QS shade corner radius</string>
+
 </resources>
