AE: fix misformed string
Change-Id: I6d9b0d4c96ef77f13c96b40a41db284a081bc3f6

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -312,7 +312,7 @@
     <string name="weather_hide_panel_never_title">Never</string>
     <string name="weather_hide_panel_auto_summary">The weather panel will be hidden, when the visible notifications will reach the maximum allowed notifications on the lock screen</string>
     <string name="weather_hide_panel_custom_summary">The weather panel will be hidden, when the visible notifications will reach the choosen number of notifications (%s)</string>
-    <string name="weather_hide_panel_never_summary">The weather panel whon/`t be hidden</string>
+    <string name="weather_hide_panel_never_summary">The weather panel won\'t be hidden</string>
     <string name="weather_number_of_notifications_title">Number of notifications</string>
     <string name="weather_number_of_notifications_dlg_title">Choose the number of notifications to hide the weather panel</string>
     <string name="weather_number_of_notifications_always_title">Always</string>
