3 finger gesture - 3rd part
Change-Id: I79ef06d7a4d5b15f0248df65f0fe1018baa1abc6

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -543,10 +543,6 @@
     <string name="sizer_message_noselect">Nothing selected.</string>
     <string name="system_app_remover">System App Remover</string>
 
-    <!-- Three-fingers-swipe to screenshot -->
-    <string name="three_finger_gesture">Three finger gesture</string>
-    <string name="three_finger_gesture_summary">Swipe three finger to screenshot</string>
-
     <!-- SU -->
     <string name="cannot_get_su">Cannot get superuser access, exiting.</string>
     <string name="cannot_get_su_start">Cannot get superuser access.</string>
@@ -893,4 +889,8 @@
     <string name="media_scanner_on_boot_enabled">Scan media</string>
     <string name="media_scanner_on_boot_ask">Ask to scan (notification)</string>
     <string name="media_scanner_on_boot_disabled">Do not scan media</string>
+
+    <!-- Three finger gesture -->
+    <string name="three_finger_gesture_title">Three finger gesture</string>
+
 </resources>
