--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -878,6 +878,8 @@
     <string name="volume_dialog_stroke_color_title">Volume dialog stroke color</string>
     <string name="volume_dialog_stroke_thickness_title">Volume dialog stroke thickness</string>
     <string name="volume_dialog_corner_radius_title">Volume dialog corner radius</string>
+    <string name="volume_dialog_dash_width_title">Volume dialog stroke dash width</string>
+    <string name="volume_dialog_dash_gap_title">Volume dialog stroke dash gap</string>
 
     <!-- QS stroke settings -->
     <string name="qs_stroke_title">QS shade stroke</string>
