--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -889,6 +889,8 @@
     <string name="qs_stroke_color_title">QS shade stroke color</string>
     <string name="qs_stroke_thickness_title">QS shade stroke thickness</string>
     <string name="qs_corner_radius_title">QS shade corner radius</string>
+    <string name="qs_dash_width_title">QS stroke dash width</string>
+    <string name="qs_dash_gap_title">QS stroke dash gap</string>
 
     <!-- MediaScanner behavior on boot -->
     <string name="media_scanner_on_boot_title">MediaScanner behavior on boot</string>
