AE: Add AICP logo to QS panel (2/2)
Change-Id: I686300a741033a8154e752d71d3e3a7b88a78a4e
Signed-off-by: LorDClockaN <lordclockan@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -897,4 +897,14 @@
     <string name="media_scanner_on_boot_enabled">Scan media</string>
     <string name="media_scanner_on_boot_ask">Ask to scan (notification)</string>
     <string name="media_scanner_on_boot_disabled">Do not scan media</string>
+
+    <!-- QS stroke settings -->
+    <string name="qs_panel_logo_category">QS panel logo</string>
+    <string name="qs_panel_logo_title">QS panel AICP logo</string>
+    <string name="qs_panel_logo_disabled">Disabled</string>
+    <string name="qs_panel_logo_accent">Accent color</string>
+    <string name="qs_panel_logo_custom">Custom color</string>
+    <string name="qs_panel_logo_color_title">QS panel logo color</string>
+    <string name="qs_panel_logo_alpha_title">QS panel logo transparency</string>
+
 </resources>
