Fix the translation cancer
Change-Id: I5a80fc03ac34bffa3f7d9ab7d809f72e502d19fd

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Ajouts Aicp</string>
+    <string name="app_name">Aicp Extras</string>
 
     <string name="navigation_drawer_open">Ouvrir le tiroir de navigation</string>
     <string name="navigation_drawer_close">Fermer le tiroir de navigation</string>
@@ -8,8 +8,8 @@
     <string name="first_layout_title">Espace réservé pour les diverses merdes\et les nanas nues</string>
     <string name="second_layout_title">Deuxième disposition</string>
     <string name="third_layout_title">Troisième disposition</string>
-    <string name="aicp_extras_title">Ajouts AICP</string>
-    <string name="pun_title">Une ROM pour tous les gouverner</string>
+    <string name="aicp_extras_title">Aicp Extras</string>
+    <string name="pun_title">Une ROM pour les gouverner tous</string>
     <string name="various_shit_title">Diverses merdes</string>
     <string name="about_title">A propos</string>
     <string name="other_title">Autre</string>
@@ -20,8 +20,8 @@
     <string name="welcome_title">BIENVENUE dans le monde réel !</string>
     <string name="logo">logo</string>
     <string name="display_animations_title">Affichage et animations</string>
-    <string name="multishit_title">Multiples merdes</string>
-    <string name="transparency_porn_title">Transparence</string>
+    <string name="multishit_title">Multimerdes</string>
+    <string name="transparency_porn_title">Porno de panneaux</string>
     <string name="notificaitons_title">Tiroir de notification</string>
     <string name="statubar_title">Barre d\'état</string>
     <string name="lockscreen_title">Écran de déverrouillage</string>
