AE: Lockscreen clock and date font size (2/2)
Change-Id: I5466d2c393d51d5230d7eaf4d3cfc3fbfd2e7afe
Signed-off-by: LorDClockaN <lordclockan@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -907,4 +907,8 @@
     <string name="qs_panel_logo_color_title">QS panel logo color</string>
     <string name="qs_panel_logo_alpha_title">QS panel logo transparency</string>
 
+    <!-- Lockscreen clock and date font size -->
+    <string name="lockscreen_clock_font_size_title">Lock clock font size</string>
+    <string name="lockscreen_date_font_size_title">Lock date font size</string>
+
 </resources>
