[AE] Configurable Header Text Shadow (2/2)
Change-Id: I26d209763ed49a635ac4bcbd450277a0688a8cda
Signed-off-by: pranav <cherukupallip@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -821,6 +821,11 @@
     <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
     <string name="unit_percent">\u0025</string>
 
+    <!-- Header text shadow -->
+    <string name="status_bar_custom_header_text_shadow_title">Header Text shadow</string>
+    <string name="status_bar_custom_header_text_shadow_summary">For better visibility on themed headers</string>
+    <string name="unit_percent">\u0025</string>
+
     <!-- AdAway -->
     <string name="adaway_settings_title">AdAway</string>
 
