--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -821,6 +821,12 @@
     <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
     <string name="unit_percent">\u0025</string>
 
+    <!-- Header text shadow and color -->
+    <string name="status_bar_custom_header_text_shadow_title">Header text shadow</string>
+    <string name="status_bar_custom_header_text_shadow_summary">For better visibility on themed headers</string>
+    <string name="status_bar_custom_header_text_shadow_color_title">Header text shadow color</string>
+    <string name="unit_percent">\u0025</string>
+
     <!-- AdAway -->
     <string name="adaway_settings_title">AdAway</string>
 
